# iphone-harness

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SETUP.md  SKILL.md  install.md  pyproject.toml
agent-workspace/: agent_helpers.py
agent-workspace/domain-skills/com.amazon.Amazon/: buy-now.md
agent-workspace/domain-skills/com.apple.MobileSMS/: send-text.md  tapback-reaction.md
agent-workspace/domain-skills/com.apple.Preferences/: auto-lock.md
agent-workspace/domain-skills/com.apple.mobiletimer/: create-alarm.md
agent-workspace/domain-skills/com.atebits.Tweetie2/: post.md
agent-workspace/domain-skills/com.burbn.instagram/: navigation.md  post-photo.md
agent-workspace/domain-skills/com.chess.iphone/: play-a-bot.md
agent-workspace/domain-skills/com.linkedin.LinkedIn/: post.md
interaction-skills/: alerts.md  home-bar-tap-zone.md  native-screenshot.md  ocr-fallback.md  picker-wheels.md  scroll-into-tappable-zone.md  wait-for-animations.md
src/iphone_harness/: _ipc.py  admin.py  daemon.py  helpers.py  run.py
